# json-stream-compressor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
include/: json_compressor.h
src/: json_compressor.cpp
test/: test.cpp
test/samples/: sample1.txt
